--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "debug": "^3.0.0",
     "eslint-config-airbnb": "^15.1.0",
     "express": "^4.15.3",
+    "jade": "^1.11.0",
     "mongodb": "^2.2.31",
     "mongoose": "^4.11.5",
     "morgan": "^1.8.2",
+    "pug": "^2.0.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   },
