--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "body-parser": "^1.17.2",
-    "bulma": "^0.5.0",
-    "cookie-parser": "^1.4.3",
-    "debug": "^3.0.0",
-    "eslint-config-airbnb": "^15.1.0",
-    "express": "^4.15.3",
+    "body-parser": "^1.19.0",
+    "bulma": "^0.8.2",
+    "cookie-parser": "^1.4.5",
+    "debug": "^4.1.1",
+    "eslint-config-airbnb": "^18.1.0",
+    "express": "^4.17.1",
     "jade": "^1.11.0",
-    "mongodb": "^2.2.31",
-    "mongoose": "^4.11.5",
-    "morgan": "^1.8.2",
+    "mongodb": "^3.5.6",
+    "mongoose": "^5.9.9",
+    "morgan": "^1.10.0",
     "pug": "^2.0.4",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "react-scripts": "1.0.10"
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
